# infra

./: .gitignore  Makefile  README.md  TODO
.github/workflows/: deploy-geoip.yaml
compute-at-edge-test/src/: index.js
fastly-compute/geoip/: .secret.json  README.md  fastly.toml  npm-shrinkwrap.json  package.json
images/: Makefile
images/consul/: Dockerfile
k8s/: Makefile
k8s/cluster-admins/: dstufft.yaml
k8s/kcm/: 00-namespace.yaml  02-pvc.yaml  03-rbac.yaml  04-deployment.yaml
k8s/vault/: 01-consul.yaml
kubernetes/: pull-private.sh  setup-cluster.sh  start-minikube.sh  wire-into-minikube.sh
kubernetes/certificate-approver/: 01-clusterrolebinding.yml  02-deployment.yml  Dockerfile
kubernetes/certificate-requestor/: Dockerfile  requestor.py  requirements.txt
kubernetes/consul/: bootstrap-acls  consul.yaml  initial-secrets.yaml
kubernetes/containers/: build-all
kubernetes/goldfish/: Dockerfile  boostrap-vault-goldfish  goldfish-ingress.yml
kubernetes/scripts/: build-container  build-container-push  build-push-docker  build-push-docker.sh  pull-private  setup-cluster.sh  start-minikube  wire-into-minikube.sh
kubernetes/secure-sidecar/: Dockerfile  requirements.txt  sidecar.py
kubernetes/vault/: bootstrap-acls  bootstrap-vault  vault.yaml  (+1 more)
kubernetes/vault-enrollment-controller/: .gitignore  Dockerfile  bootstrap-vault-ca-minikube  bootstrap-vault-kubernetes-auth  controller.py  requirements.txt
lambda-deployer/: Cargo.toml  Dockerfile
terraform/: .gitignore  .terraform.lock.hcl  README.md  config.tf  main.tf  versions.tf
(+150 files in other folders)
