[package]
name = "lambda-deployer"
version = "0.1.0"
authors = ["Donald Stufft <donald@stufft.io>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.1"
aws_lambda_events = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"
simple_logger = "1"
rusoto_core = "0.36.0"
rusoto_lambda = "0.36.0"
openssl = { version = "0.10", features = ["vendored"] }
backoff = "0.1.2"

[profile.release]
lto = true
overflow-checks = true
